--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-coffee",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://abla-bechoua.github.io/coffee-chop",
+  "homepage": "https://abla-bechoua.github.io/coffee",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
